# somnia_mobile

./: LICENSE  README.md
AI/notebooks/: AI.ipynb  FinalData.ipynb  bloodpressure.ipynb  data.ipynb  spo2.ipynb  test.ipynb
AI/processed/: 1487_clean.csv  2201_clean.csv  2210_clean.csv  3379_clean.csv  4891_clean.csv  5359_clean.csv  5544_clean.csv  6008_clean.csv  6777_clean.csv  7359_clean.csv  8176_clean.csv  9775_clean.csv  BloodPressureData_clean.csv  bp_people_features.csv  merged_dataset.csv  sourceA_all_clean.csv  sp02Data_clean.csv  spo2_clean_no_datetime.csv
AI/raw/: 1487.csv  2201.csv  2210.csv  3379.csv  4891.csv  5359.csv  5544.csv  6008.csv  6777.csv  7359.csv  8176.csv  9775.csv  sp02Data.csv
client/: index.html  package-lock.json  package.json
client/DashboardPages/: AiPrediction.jsx  DashboardCard.jsx  HealthOverview.jsx  Statistics.jsx
client/src/: App.jsx  main.jsx
mobile/: .gitignore  App.tsx  README.md  app.json  eas.json  eslint.config.js  index.js  metro.config.js  package-lock.json  package.json
mobile/android/: build.gradle  gradle.properties  settings.gradle
mobile/android/app/: CMakeLists.txt  build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/belleza/mobile/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/java/com/somnia/mobile/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/values/: strings.xml  styles.xml
mobile/app/: _layout.jsx  diary.jsx  home.jsx  index.jsx  login.jsx  (+6 more)
server/: .env  package-lock.json  package.json  server.js
(+96 files in other folders)
